--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "classmap": ["tests/"]
   },
   "require" : {
-    "php" : ">=7.4.0"
+    "php" : "^7.4 || ^8.0"
   },
   "require-dev" : {
 		"phpunit/phpunit": "^9.3"
